2003-05-15  Kevin B. Kenny  <kennykb@hippolyta>

	* generic/tclGetDate.y: added further hackery to the yacc
	* generic/tclDate.c:    post-processing to arrange for the
	* unix/Makefile.in:     code to set up exit handlers to free
	                        the stacks [Bug 736425].

2003-05-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/socket.n: 

	* library/encoding/gb2312-raw.enc (new): This is the original
	gb2312.enc renamed to allow for it to still be used.  This is
	needed by Tk (unix) because X fonts with gb2312* charsets really
	do want the original gb2312 encoding. [Bug 557030]

2003-05-14  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdAH.c (Tcl_FormatObjCmd): Stop unwarranted demotion
	of wide values to longs by formatting of int values.  [Bug 699060]

2003-05-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/encoding/gb2312.enc: copy euc-cn.enc over original
	gb2312.enc.  gb2312.enc appeared to not work as expected, and most
	uses of gb2312 really mean euc-cn (which may be the cause of the
	problem). [Bug 557030]

2003-05-15  Daniel Steffen  <das@users.sourceforge.net>

	Implementation of TIP 118:
	
	* generic/tclFCmd.c (TclFileAttrsCmd): return the list of attributes
	that can be retrieved without error for a given file, instead of
	aborting the whole command when any error occurs.

	* unix/tclUnixFCmd.c: added support for new file attributes and for
	copying Mac OS X file attributes & resource fork during [file copy].

	* generic/tclInt.decls: added declarations of new external commands
	needed by new file attributes support in tclUnixFCmd.c.

	* macosx/tclMacOSXFCmd.c (new): Mac OS X specific implementation of
	new file attributes and of attribute & resource fork copying.

	* mac/tclMacFCmd.c: added implementation of -rsrclength attribute &
	fixes to other attributes for consistency with OSX implementation.

	* mac/tclMacResource.c: fixes to OSType handling.

	* doc/file.n: documentation of [file attributes] changes.
